# Personal-Django

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
app/: main.py
app/e2e/articles/: test_create.py  test_find.py  test_list.py
app/src/adapters/api/articles/: articles_controllers.py
app/src/adapters/api/articles/dto/: create.py
app/src/adapters/spi/db/: config.py
app/src/adapters/spi/db/models/: article.py  aticle.py  author.py
app/src/adapters/spi/db/repositories/: article.py  articles.py  author.py  schema.py
app/src/adapters/spi/db/sessions/: article.py  user.py
app/src/adapters/spi/db/shemas/: aticle.py  user.py
app/src/adapters/spi/db/tables/: aticle.py  author.py
app/src/application/persistences/: article.py  article_persistency.py  athor.py
app/src/application/use_cases/article/: list_articles.py
app/src/application/use_cases/articles/: create_article.py  find_article.py  list_articles.py
app/src/entities/: article.py  author.py
app/src/infrastructure/: app.py
conduit/: asgi.py  settings.py  urls.py  wsgi.py
polls/: models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: index.html
