[tool.poetry]
name = "personal-fastapi"
version = "0.1.0"
description = ""
authors = ["Nitai Charan <nitaicharan@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.scripts]
start = "app.main:main"
test = "poetry run pytest-watch"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = {extras = ["all"], version = "^0.95.1"}
injector = "^0.20.1"
fastapi-injector = "^0.4.0"
httpx = "^0.24.0"
sqlmodel = "^0.0.8"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
uvicorn = "^0.30.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyprojectx.aliases]
# convenience shortcuts
run = "poetry run"
shell = "poetry shell"
test = "poetry run pytest"
lint = ["ruff check"]
check = ["@lint", "@test"]
